Disable fact gathering for create_admin
The create_admin execution doesn't require facts as the tasks are
static. Fact gather can be a long time on systems with large number of
network interfaces or storage volumes. This can lead to timeouts when
doing actions like scaling or deploying.

Change-Id: I0ff270dfabab2ef6926b8d2818ef5087eb03bed9
Closes-Bug: #1869018

--- a/workbooks/access.yaml
+++ b/workbooks/access.yaml
@@ -121,6 +121,7 @@ workflows:
           config: |
             - hosts: localhost
               connection: local
+              gather_facts: false
               tasks: <% json_pp($.tasks) %>
 
       get_privkey:
