--- a/workbooks/access.yaml
+++ b/workbooks/access.yaml
@@ -142,6 +142,7 @@ workflows:
           config: |
             - hosts: localhost
               connection: local
+              gather_facts: false
               tasks: <% json_pp($.tasks) %>
 
       get_privkey:
