remove py27 from tox.ini
Remove python 2 from envlist parameter. Check the link:

https://etherpad.openstack.org/p/drop-python2-support
https://governance.openstack.org/tc/goals/selected/ussuri/drop-py27.html

The plan is drop the python 2 support from OpenStack in Ussuri release.
Move the basepython parameter.

Change-Id: I74a8f60de9121eac8057bf083be55d4316609719

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
 minversion = 3.8
-envlist = linters,py27,py37
+envlist = linters,py37
 skipsdist = True
 
 [testenv]
+basepython = python3
 usedevelop = True
 setenv =
     ANSIBLE_FORCE_COLOR=1
@@ -48,11 +49,9 @@ commands =
     tox -e linters -- flake8
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [testenv:cover]
-basepython = python3
 setenv =
   PYTHON=coverage run --source tripleo_common --parallel-mode
 commands =
@@ -64,12 +63,10 @@ commands =
   coverage report
 
 [testenv:docs]
-basepython = python3
 commands =
   sphinx-build -W --keep-going -b html -d doc/build/doctrees doc/source doc/build/html
 
 [testenv:debug]
-basepython = python3
 commands = oslo_debug_helper {posargs}
 
 # deprecated: covered by linters
@@ -90,18 +87,15 @@ commands =
     bash -c tools/check_duplicate_jinja_blocks.sh
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
   -r{toxinidir}/requirements.txt
 
 [testenv:releasenotes]
-basepython = python3
 commands = bash -c tools/releasenotes_tox.sh
 
 [testenv:requirements]
-basepython = python3
 deps =
   -egit+https://opendev.org/openstack/requirements#egg=openstack-requirements
 whitelist_externals = sh
