[Train only] Add ssh timeout for baremetal_deploy
Mistakingly and historically
tripleo.baremetal_deploy.v1.deploy_instances used to pass its
timeout input into ansible connection timeout instead of
global/deployment timeout.

To pertain the established tradition for setting connection timeout to
some timeout, add missing input for ansible connection timeout and give
it some reasonable value.

The use of the timeout input to be passed into the real deployment
timeout parameter is fixed in the scope of the related bug.

Related-Bug: #1868063

Change-Id: I7d2fce9f07c98b1770c01cacbae2d17b8e143b3b
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>

--- a/workbooks/baremetal_deploy.yaml
+++ b/workbooks/baremetal_deploy.yaml
@@ -77,6 +77,7 @@ workflows:
       - ssh_user_name: heat-admin
       - timeout: 3600
       - concurrency: 20
+      - connection_timeout: 600
       - queue_name: tripleo
 
     tags:
@@ -232,6 +233,7 @@ workflows:
           ssh_keys: <% $.ssh_keys %>
           ssh_user_name: <% $.ssh_user_name %>
           timeout: <% $.timeout %>
+          connection_timeout: <% $.connection_timeout %>
           queue_name: <% $.queue_name %>
         publish:
           ctlplane_ips: <% task().result.ctlplane_ips %>
