[Train only] Wire-in missing concurrency for deploy_instances
Add the missing part for the concurrency input of
tripleo.baremetal_deploy.v1.deploy_instances
to make it really customizable.

Change-Id: I01de538347c6cbbd18efe790031d6a4188520aa5
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>

--- a/workbooks/baremetal_deploy.yaml
+++ b/workbooks/baremetal_deploy.yaml
@@ -233,6 +233,7 @@ workflows:
           ssh_keys: <% $.ssh_keys %>
           ssh_user_name: <% $.ssh_user_name %>
           timeout: <% $.timeout %>
+          concurrency: <% $.concurrency %>
           connection_timeout: <% $.connection_timeout %>
           queue_name: <% $.queue_name %>
         publish:
