--- a/workbooks/baremetal_deploy.yaml
+++ b/workbooks/baremetal_deploy.yaml
@@ -232,6 +232,7 @@ workflows:
           ssh_keys: <% $.ssh_keys %>
           ssh_user_name: <% $.ssh_user_name %>
           timeout: <% $.timeout %>
+          concurrency: <% $.concurrency %>
           queue_name: <% $.queue_name %>
         publish:
           ctlplane_ips: <% task().result.ctlplane_ips %>
