--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@
 
 pbr!=2.1.0,>=2.0.0 # Apache-2.0
 Babel!=2.4.0,>=2.3.4 # BSD
-GitPython>=1.0.1;python_version>='3.0' # BSD License (3 clause)
-GitPython>=1.0.1,<2.1.12;python_version<'3.0' # BSD License (3 clause)
+GitPython>=1.0.1 # BSD License (3 clause)
 eventlet!=0.20.1,>=0.20.0 # MIT
 python-heatclient>=1.10.0 # Apache-2.0
 oslo.config>=5.2.0 # Apache-2.0
@@ -13,8 +12,7 @@ oslo.log>=3.36.0 # Apache-2.0
 oslo.rootwrap>=5.8.0 # Apache-2.0
 oslo.utils>=3.33.0 # Apache-2.0
 python-glanceclient>=2.8.0 # Apache-2.0
-python-ironicclient!=2.5.2,!=2.7.1,!=3.0.0,>=2.3.0,<4.0.0;python_version=='2.7' # Apache-2.0
-python-ironicclient!=2.5.2,!=2.7.1,!=3.0.0,>=2.3.0;python_version>='3.6' # Apache-2.0
+python-ironicclient!=2.5.2,!=2.7.1,!=3.0.0,>=2.3.0 # Apache-2.0
 six>=1.10.0 # MIT
 mistral-lib>=0.3.0 # Apache-2.0
 oslo.concurrency>=3.26.0 # Apache-2.0
@@ -30,7 +28,6 @@ python-zaqarclient>=1.0.0 # Apache-2.0
 python-keystoneclient>=3.8.0 # Apache-2.0
 keystoneauth1>=3.4.0 # Apache-2.0
 tenacity>=4.4.0 # Apache-2.0
-futures>=3.0.0;python_version=='2.7' or python_version=='2.6'  # BSD
 metalsmith>=0.13.0 # Apache-2.0
 jsonschema>=2.6.0 # MIT
 requests>=2.18.0,!=2.20.0  # Apache-2.0
