--- a/workbooks/package_update.yaml
+++ b/workbooks/package_update.yaml
@@ -153,7 +153,7 @@ workflows:
         on-error: node_update_failed
         publish-on-error:
           status: FAILED
-          message: Ansible failed, check log at <% $.work_dir %>/<% execution().id %>/ansible.log.
+          message: Ansible failed, check log at /var/log/containers/mistral/package_update.log.
         publish:
           log_path: <% task().result.get('log_path') %>
 
@@ -167,7 +167,7 @@ workflows:
         on-success: send_message
         publish:
           status: FAILED
-          message: Ansible failed, check log at <% $.get('work_dir') %>/<% execution().id %>/ansible.log.
+          message: Ansible failed, check log at /var/log/containers/mistral/package_update.log.
 
       send_message:
         workflow: tripleo.messaging.v1.send
