--- a/workbooks/package_update.yaml
+++ b/workbooks/package_update.yaml
@@ -160,7 +160,7 @@ workflows:
         on-error: node_update_failed
         publish-on-error:
           status: FAILED
-          message: Ansible failed, check log at <% $.work_dir %>/<% execution().id %>/ansible.log.
+          message: Ansible failed, check log at /var/log/mistral/package_update.log.
         publish:
           log_path: <% task().result.get('log_path') %>
 
@@ -174,7 +174,7 @@ workflows:
         on-success: notify_zaqar
         publish:
           status: FAILED
-          message: Ansible failed, check log at <% $.get('work_dir') %>/<% execution().id %>/ansible.log.
+          message: Ansible failed, check log at /var/log/mistral/package_update.log.
 
       notify_zaqar:
         action: zaqar.queue_post
