[stable-only] check for stack status IN_PROGRESS to retry
Looks like we're retrying listing of stacks when the stack_status
is DELETE_FAILED. As we're not retrying stack deletion again listing
the stack again would not change the stack_status automagically,
after it's marked DELETE_FAILED.

stack delete call won't return before it's marked DELETE_IN_PROGRESS.
We can check for stack exists and stack_status DELETE_IN_PROGRESS to
retry.

Mistral 'continue-on':
Defines an expression that will continue iteration loop if it evaluates
to ‘true’.

Closes-Bug: #1877258
Change-Id: I4885e820868f746e793dacc7eb0c2155f3836d5c

--- a/workbooks/stack.yaml
+++ b/workbooks/stack.yaml
@@ -96,7 +96,7 @@ workflows:
         retry:
           delay: 15
           count: <% $.timeout / 15 %>
-          continue-on: <% $.stack_status = 'DELETE_FAILED' or $.stack in task().result.stacks.select([$.stack_name, $.id]).flatten() %>
+          continue-on: <% $.stack in task().result.stacks.select([$.stack_name, $.id]).flatten() and $.stack_status = 'DELETE_IN_PROGRESS' %>
         on-complete:
           fail: <% $.stack_status = 'DELETE_FAILED' %>
 
