linters refresh w/ afferent bugfixes
- removes ansible-lint as we have no ansible files here
- bumps linter versions
- fixes newly found errors
- return to more interesting work

Change-Id: Iaaf0a850c8429fe041a595028cbc31b9ff0fb9e5
Partial-Bug: #1878150
(cherry picked from commit cb497e83f954a4e7cc36d7a832da9c03d5085a0f)

--- a/tox.ini
+++ b/tox.ini
@@ -81,9 +81,8 @@ commands =
 [testenv:linters]
 skip_install = true
 deps =
-    # workaround for https://github.com/ansible/ansible-lint/issues/590
-    virtualenv==16.3.0 # 16.7.6 not working
-    pre-commit
+    virtualenv>=20.0.20
+    pre-commit>=2.4.0
 commands =
     python -m pre_commit run -a {posargs:}
     bash -c tools/check_duplicate_jinja_blocks.sh
