--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.2.3
+    rev: v2.5.0
     hooks:
       - id: trailing-whitespace
       - id: mixed-line-ending
@@ -12,21 +12,14 @@ repos:
       - id: check-yaml
         files: .*\.(yaml|yml)$
   - repo: https://gitlab.com/pycqa/flake8.git
-    rev: '3.7.7'
+    rev: 3.8.1
     hooks:
       - id: flake8
-  - repo: https://github.com/ansible/ansible-lint
-    rev: v4.1.0a0
-    hooks:
-      - id: ansible-lint
-        files: \.(yaml|yml)$
-        exclude: ^workbooks/
-        entry: ansible-lint --force-color -v
   - repo: https://github.com/openstack-dev/bashate.git
-    rev: 0.6.0
+    rev: 2.0.0
     hooks:
       - id: bashate
-        entry: bashate --error . --verbose --ignore=E006,E040,E042
+        entry: bashate --error . --ignore=E006,E040,E042
         # Run bashate check for all bash scripts
         # Ignores the following rules:
         # E006: Line longer than 79 columns (as many scripts use jinja
