Fix OVN Octavia provider driver package name
In Ussuri cycle, the OVN Octavia provider driver moved out
of the networking-ovn RPM to its own RPM.

Change-Id: I19b1dda0d10765651ad61682d0783f9253873063

--- a/container-images/tcib/base/os/octavia-base/octavia-api/octavia-api.yaml
+++ b/container-images/tcib/base/os/octavia-base/octavia-api/octavia-api.yaml
@@ -8,5 +8,5 @@ tcib_packages:
   - mod_ssl
   - openstack-octavia-api
   - python3-mod_wsgi
-  - python3-networking-ovn
+  - python3-ovn-octavia-provider
 tcib_user: octavia
