Fix dry-run for "remote copy deployment file" task
This was missing in the last attempt to make that playbook working in
check mode.

Change-Id: I2de91a2b06fade9969eb294d576bb33bc2d2bff3

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -144,7 +144,7 @@
     content: "[ {{ deployment_content.content | b64decode | from_yaml | json_query(item_only) }} ]"
     dest: "/var/lib/heat-config/tripleo-config-download/{{ item ~ '-' ~ deployment_uuid }}"
   when:
-    - deployment_content is defined
+    - not ansible_check_mode|bool
 
 - name: "Check if deployed file exists for {{ item }}"
   stat:
