Add support for python 3.8
Introduce support of python 3.8 [1] and move tox and jobs to py38.

jsonschema 3.2.0 [2] support python 3.8

[1] https://governance.openstack.org/tc/reference/runtimes/victoria.html#python-runtimes-for-victoria
[2] https://github.com/Julian/jsonschema/pull/627

Change-Id: I34a47d6fe90da33215c4551a868644e5d6c8906c

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -14,11 +14,13 @@
         - openstack-tox-linters
         - openstack-tox-py36
         - openstack-tox-py37
+        - openstack-tox-py38
         - tripleo-ci-centos-8-containers-multinode:
             dependencies: &deps_unit_lint
               - openstack-tox-linters
               - openstack-tox-py36
               - openstack-tox-py37
+              - openstack-tox-py38
         - tripleo-ci-centos-8-undercloud-containers:
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-standalone:
