Switch namespace for ussuri
We've cut ussuri and the container namespace is tripleou.

Change-Id: I9120baab15b15b1ce5e3944eaec099527ea82f0d

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -13,7 +13,7 @@ parameter_defaults:
     # <prefix>/share/tripleo-common/container-images/overcloud_containers.yaml.j2
     set:
       # Container image name components for OpenStack images.
-      namespace: docker.io/tripleomaster
+      namespace: docker.io/tripleou
       name_prefix: centos-binary-
       name_suffix: ''
       tag: current-tripleo
