Run standalone jobs with locally built images
This is an unclean backport for stable/train which is targeted on
centos7 for now. I'll move to centos8 when the jobs are ready on this
branch.

Instead of pulling images from a local registry, build them locally
since the configs that build them are in tripleo-common.

Also trigger the appropriate scenarios if a container config is changed.

Note: this patch will make all standalone jobs running against
tripleo-common to use locally built container images, even if the patch
isn't about a container image config file. It has been found that the
time to build images is roughly the same as the time it takes to update
them once pulled from a remote registry.

Note: scenarios will come later.

Depends-On: https://review.opendev.org/#/c/738375
Change-Id: I28d2edd4f923fb2d263df43fff4ef82a4072040c
(cherry picked from commit 679aeb568f37d4d883d3613b4133c158521a08c1)
(cherry picked from commit b53977c72356cc4338e3bf9c0cb8620a789d268d)

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -26,6 +26,10 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-7-standalone:
             dependencies: *deps_unit_lint
+        - tripleo-ci-centos-8-standalone:
+            dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
         - tripleo-ci-centos-7-scenario000-multinode-oooq-container-upgrades:
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-7-scenario000-multinode-oooq-container-updates:
