Run standalone jobs with locally built images
Instead of pulling images from a local registry, build them locally
since the configs that build them are in tripleo-common.

Also trigger the appropriate scenarios if a container config is changed.

Note: this patch will make all standalone jobs running against
tripleo-common to use locally built container images, even if the patch
isn't about a container image config file. It has been found that the
time to build images is roughly the same as the time it takes to update
them once pulled from a remote registry.

Note: scenario001/002 will come later once we figure out an issue with
gnocchi-db-sync and cradox.

Depends-On: https://review.opendev.org/729465
Change-Id: I28d2edd4f923fb2d263df43fff4ef82a4072040c

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -28,6 +28,8 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
         - tripleo-build-containers-ubi-8:
             dependencies: *deps_unit_lint
             files:
@@ -48,8 +50,30 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-scenario003-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/designate.*$
+              - ^container-images/tcib/base/os/mistral.*$
+              - ^container-images/tcib/base/os/sahara.*$
         - tripleo-ci-centos-8-scenario004-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/manila.*$
+        - tripleo-ci-centos-8-scenario007-standalone:
+            dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/neutron.*$
+        - tripleo-ci-centos-8-scenario010-standalone:
+            dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/octavia.*$
         - tripleo-buildimage-overcloud-full-centos-8:
             dependencies: *deps_unit_lint
             files:
