--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -23,6 +23,8 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
         - tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates:
             dependencies: *deps_unit_lint
             files:
@@ -39,8 +41,30 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-scenario003-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/designate.*$
+              - ^container-images/tcib/base/os/mistral.*$
+              - ^container-images/tcib/base/os/sahara.*$
         - tripleo-ci-centos-8-scenario004-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/manila.*$
+        - tripleo-ci-centos-8-scenario007-standalone:
+            dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/neutron.*$
+        - tripleo-ci-centos-8-scenario010-standalone:
+            dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/os/octavia.*$
         - tripleo-buildimage-overcloud-full-centos-8:
             dependencies: *deps_unit_lint
             files:
