tcib: move cradox to gnocchi-base & enable ci on scenario001
gnocchi-db-sync requires cradox to be installed if RBD backend is used.
Until we fix it properly in the distgit, let's make sure cradox is in
the base image for gnocchi. It also requires httpd and deps for the
dv_sync to operate when Ceph is installed.

With that patch, we can now test container builds on scenario001.

Note: adding panko-api container image, required in Train.

Change-Id: Id13028ab911ba91d67787ca8247effc02017fcbc
(cherry picked from commit 7ecc263401018ec657e3423edcd9974bd8a2754f)
(cherry picked from commit 55573ec43fdc9ffddbbf9928ab4b16df8edc56c3)

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -192,6 +192,8 @@ container_images:
 - image_source: tripleo
   imagename: quay.io/tripleotrain/openstack-ovn-sb-db-server:current-tripleo
 - image_source: tripleo
+  imagename: quay.io/tripleotrain/openstack-panko-api:current-tripleo
+- image_source: tripleo
   imagename: quay.io/tripleotrain/openstack-placement-api:current-tripleo
 - image_source: tripleo
   imagename: quay.io/tripleotrain/openstack-qdrouterd:current-tripleo
