--- a/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
+++ b/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
@@ -4,3 +4,10 @@ tcib_actions:
 tcib_packages:
   common:
   - gnocchi-common
+  - python3-cradox
+  - python3-eventlet
+  - httpd
+  - mod_ssl
+  - python3-boto3
+  - python3-ldappool
+  - python3-mod_wsgi
