tcib: move cradox to gnocchi-base & enable ci on scenario001
gnocchi-db-sync requires cradox to be installed if RBD backend is used.
Until we fix it properly in the distgit, let's make sure cradox is in
the base image for gnocchi. It also requires httpd and deps for the
dv_sync to operate when Ceph is installed.

With that patch, we can now test container builds on scenario001.

Change-Id: Id13028ab911ba91d67787ca8247effc02017fcbc

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -46,6 +46,18 @@
               - scripts/.*$
         - tripleo-ci-centos-8-scenario001-standalone:
             dependencies: *deps_unit_lint
+            vars:
+              build_container_images: true
+            files:
+              - ^container-images/tcib/base/collectd.*$
+              - ^container-images/tcib/base/os/aodh.*$
+              - ^container-images/tcib/base/os/ceilometer.*$
+              - ^container-images/tcib/base/os/cinder.*$
+              - ^container-images/tcib/base/os/gnocchi.*$
+              - ^container-images/tcib/base/os/heat.*$
+              - ^container-images/tcib/base/qdrouterd.*$
+              - ^container-images/tcib/base/rabbitmq.*$
+              - ^container-images/tcib/base/redis.*$
         - tripleo-ci-centos-8-scenario002-standalone:
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-scenario003-standalone:
