Run tripleo-build-containers-ubi-8 under specific conditions
Only run tripleo-build-containers-ubi-8 if container image configs are
changed.

Depends-On: I50e0b773273910ed7e4884d52106f07003d4e080
Change-Id: Iad94d65487c98fff8f054f0eadc334d7e7c1e4ed

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -27,6 +27,10 @@
             dependencies: *deps_unit_lint
         - tripleo-ci-centos-8-standalone:
             dependencies: *deps_unit_lint
+        - tripleo-build-containers-ubi-8:
+            dependencies: *deps_unit_lint
+            files:
+              - ^container-images/.*$
         - tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates:
             dependencies: *deps_unit_lint
             files:
