First pass at script cleanup
This change removes bits from our imported scripts that are irrelevant
for a TripleO environment. All of the sudoers implementations have been
moved into files which are copied into containers. This move will unify
how we deploy privledge escallations.

The kolla user will now be able to execute any kolla* command which
should allow us to generally simplify how we handle sudoers across
our container base.

Story: 2007780
Task: 40014
Change-Id: I2e0b98d9f60e3c862e9db3f7d87f09b5bd3a0887
Signed-off-by: Kevin Carter <kecarter@redhat.com>
(cherry picked from commit 9190a3d0001bed39a12f097750bef90d5015a42c)

--- a/container-images/tcib/base/os/barbican-base/barbican-base.yaml
+++ b/container-images/tcib/base/os/barbican-base/barbican-base.yaml
@@ -1,7 +1,9 @@
 tcib_actions:
 - run: bash /usr/local/bin/uid_gid_manage nfast barbican
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: 'echo "%kolla ALL=(root) NOPASSWD: /usr/bin/chown -R barbican /var/lib/barbican/, /bin/chown -R barbican /var/lib/barbican/" > /etc/sudoers.d/barbican_sudoers && chmod 640 /etc/sudoers.d/barbican_sudoers'
+- copy: /usr/share/tripleo-common/container-images/kolla/barbican-base/sudoers /etc/sudoers.d/barbican_sudoers
+- run: chmod 640 /etc/sudoers.d/barbican_sudoers
+tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/barbican-base/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - openstack-barbican-common
