--- a/container-images/tcib/base/os/barbican-base/barbican-base.yaml
+++ b/container-images/tcib/base/os/barbican-base/barbican-base.yaml
@@ -1,7 +1,9 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages['common'] | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
-- run: 'echo "%kolla ALL=(root) NOPASSWD: /usr/bin/chown -R barbican /var/lib/barbican/, /bin/chown -R barbican /var/lib/barbican/" > /etc/sudoers.d/barbican_sudoers && chmod 640 /etc/sudoers.d/barbican_sudoers'
+- copy: /usr/share/tripleo-common/container-images/kolla/barbican-base/sudoers /etc/sudoers.d/barbican_sudoers
+- run: chmod 640 /etc/sudoers.d/barbican_sudoers
 - run: usermod -a -G kolla barbican
+tcib_gather_files: '{{ lookup(''fileglob'', ''/usr/share/tripleo-common/container-images/kolla/barbican-base/*'', wantlist=True) }}'
 tcib_packages:
   common:
   - openstack-barbican-common
