--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -17,6 +17,7 @@
         - openstack-tox-py36
         - openstack-tox-py37
         - openstack-tox-py38
+        - tripleo-cross-tripleoclient-py38
         - tripleo-ci-centos-8-containers-multinode:
             dependencies: &deps_unit_lint
               - openstack-tox-linters
@@ -63,6 +64,7 @@
       jobs:
         - openstack-tox-linters
         - openstack-tox-lower-constraints
+        - tripleo-cross-tripleoclient-py38
         - tripleo-buildimage-overcloud-full-centos-8:
             files:
               - ^image-yaml/.*$
