--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,8 @@ mistral.actions =
     tripleo.baremetal.update_node_capability = tripleo_common.actions.baremetal:UpdateNodeCapability
     tripleo.baremetal.cell_v2_discover_hosts = tripleo_common.actions.baremetal:CellV2DiscoverHostsAction
     tripleo.baremetal.validate_nodes = tripleo_common.actions.baremetal:ValidateNodes
+    tripleo.config.download_config = tripleo_common.actions.config:DownloadConfigAction
+    tripleo.config.get_overcloud_config = tripleo_common.actions.config:GetOvercloudConfig
     tripleo.deployment.get_deployment_failures = tripleo_common.actions.deployment:DeploymentFailuresAction
     tripleo.derive_params.convert_number_to_range_list = tripleo_common.actions.derive_params:ConvertNumberToRangeListAction
     tripleo.derive_params.convert_range_to_number_list = tripleo_common.actions.derive_params:ConvertRangeToNumberListAction
