Add ensure_global_symlinks: true
https://review.opendev.org/#/c/736330/ has now added an option
ensure_global_symlinks (default 'flase') which has to be set to 'true'
if we want to use tox from normal path.

ex. 'tox -e linters -- flake8' in pep8 job.

Also ignores basepython conflict in tox.

Change-Id: Ia24678c1fe905d6c526d79f71ea973834074f703

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,11 @@ minversion = 3.8
 envlist = linters,py38
 skipsdist = True
 
+# Automatic envs will only use the python version appropriate to that
+# env and ignore basepython inherited from [testenv] if we set
+# ignore_basepython_conflict.
+ignore_basepython_conflict = True
+
 [testenv]
 basepython = python3
 usedevelop = True
