Avoid tox-in-tox issue
Change-Id: I69a9fec318fc3d163672c6ab7515b4142df862ed
Partial-Bug: https://bugs.launchpad.net/tripleo/+bug/1884989

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,6 @@ deps =
 commands = stestr run {posargs}
 whitelist_externals =
     bash
-    tox
 
 [testenv:bindep]
 deps = bindep
@@ -44,8 +43,9 @@ commands = bash -c "{toxinidir}/scripts/bindep-install"
 [testenv:pep8]
 skip_install = true
 deps =
+    {[testenv:linters]deps}
 commands =
-    tox -e linters -- flake8
+    {[testenv:linters]commands}
 
 [testenv:venv]
 basepython = python3
