--- a/container-images/tcib/base/etcd/etcd.yaml
+++ b/container-images/tcib/base/etcd/etcd.yaml
@@ -1,5 +1,6 @@
 tcib_actions:
 - run: dnf -y install {{ tcib_packages.common | join(' ') }} && dnf clean all && rm -rf /var/cache/dnf
+- run: usermod -a -G kolla etcd
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/etcd /openstack/healthcheck && chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
