--- a/container-images/tcib/base/os/placement-api/placement-api.yaml
+++ b/container-images/tcib/base/os/placement-api/placement-api.yaml
@@ -5,6 +5,8 @@ tcib_actions:
 tcib_packages:
   common:
   - httpd
+  - mariadb
+  - mariadb-server
   - mod_ssl
   - openstack-placement-api
   - openstack-placement-common
