--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -1,224 +1,222 @@
 container_images:
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-os:current-tripleo
+  imagename: docker.io/tripleou/openstack-os:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-aodh-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-aodh-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-aodh-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-aodh-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-aodh-evaluator:current-tripleo
+  imagename: docker.io/tripleou/openstack-aodh-evaluator:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-aodh-listener:current-tripleo
+  imagename: docker.io/tripleou/openstack-aodh-listener:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-aodh-notifier:current-tripleo
+  imagename: docker.io/tripleou/openstack-aodh-notifier:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-barbican-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-barbican-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-barbican-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-barbican-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-barbican-keystone-listener:current-tripleo
+  imagename: docker.io/tripleou/openstack-barbican-keystone-listener:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-barbican-worker:current-tripleo
+  imagename: docker.io/tripleou/openstack-barbican-worker:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ceilometer-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-ceilometer-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ceilometer-ipmi:current-tripleo
+  imagename: docker.io/tripleou/openstack-ceilometer-ipmi:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ceilometer-central:current-tripleo
+  imagename: docker.io/tripleou/openstack-ceilometer-central:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ceilometer-compute:current-tripleo
+  imagename: docker.io/tripleou/openstack-ceilometer-compute:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ceilometer-notification:current-tripleo
+  imagename: docker.io/tripleou/openstack-ceilometer-notification:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cinder-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-cinder-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cinder-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-cinder-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cinder-backup:current-tripleo
+  imagename: docker.io/tripleou/openstack-cinder-backup:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cinder-scheduler:current-tripleo
+  imagename: docker.io/tripleou/openstack-cinder-scheduler:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cinder-volume:current-tripleo
+  imagename: docker.io/tripleou/openstack-cinder-volume:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-collectd:current-tripleo
+  imagename: docker.io/tripleou/openstack-collectd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-cron:current-tripleo
+  imagename: docker.io/tripleou/openstack-cron:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-backend-bind9:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-backend-bind9:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-central:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-central:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-mdns:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-mdns:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-producer:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-producer:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-sink:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-sink:current-tripleo
+  imagename: docker.io/tripleou/openstack-designate-worker:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-designate-worker:current-tripleo
+  imagename: docker.io/tripleou/openstack-etcd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-etcd:current-tripleo
+  imagename: docker.io/tripleou/openstack-glance-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-glance-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-gnocchi-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-gnocchi-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-gnocchi-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-gnocchi-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-gnocchi-metricd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-gnocchi-metricd:current-tripleo
+  imagename: docker.io/tripleou/openstack-gnocchi-statsd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-gnocchi-statsd:current-tripleo
+  imagename: docker.io/tripleou/openstack-haproxy:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-haproxy:current-tripleo
+  imagename: docker.io/tripleou/openstack-heat-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-heat-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-heat-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-heat-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-heat-api-cfn:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-heat-api-cfn:current-tripleo
+  imagename: docker.io/tripleou/openstack-heat-engine:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-heat-engine:current-tripleo
+  imagename: docker.io/tripleou/openstack-heat-all:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-heat-all:current-tripleo
+  imagename: docker.io/tripleou/openstack-horizon:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-horizon:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-conductor:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-conductor:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-inspector:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-inspector:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-neutron-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-neutron-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-ironic-pxe:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ironic-pxe:current-tripleo
+  imagename: docker.io/tripleou/openstack-iscsid:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-iscsid:current-tripleo
+  imagename: docker.io/tripleou/openstack-keepalived:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-keepalived:current-tripleo
+  imagename: docker.io/tripleou/openstack-keystone:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-keystone:current-tripleo
+  imagename: docker.io/tripleou/openstack-manila-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-manila-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-manila-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-manila-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-manila-scheduler:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-manila-scheduler:current-tripleo
+  imagename: docker.io/tripleou/openstack-manila-share:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-manila-share:current-tripleo
+  imagename: docker.io/tripleou/openstack-mariadb:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mariadb:current-tripleo
+  imagename: docker.io/tripleou/openstack-memcached:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-memcached:current-tripleo
+  imagename: docker.io/tripleou/openstack-mistral-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mistral-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-mistral-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mistral-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-mistral-engine:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mistral-engine:current-tripleo
+  imagename: docker.io/tripleou/openstack-mistral-event-engine:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mistral-event-engine:current-tripleo
+  imagename: docker.io/tripleou/openstack-mistral-executor:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-mistral-executor:current-tripleo
+  imagename: docker.io/tripleou/openstack-multipathd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-multipathd:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-agent-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-agent-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-dhcp-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-dhcp-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-l3-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-l3-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-metadata-agent-ovn:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-metadata-agent-ovn:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-metadata-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-metadata-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-openvswitch-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-openvswitch-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-server:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-server:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-server-ovn:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-server-ovn:current-tripleo
+  imagename: docker.io/tripleou/openstack-neutron-sriov-agent:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-neutron-sriov-agent:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-libvirt:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-libvirt:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-compute:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-compute:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-compute-ironic:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-compute-ironic:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-conductor:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-conductor:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-novncproxy:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-novncproxy:current-tripleo
+  imagename: docker.io/tripleou/openstack-nova-scheduler:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-nova-scheduler:current-tripleo
+  imagename: docker.io/tripleou/openstack-novajoin-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-novajoin-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-novajoin-notifier:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-novajoin-notifier:current-tripleo
+  imagename: docker.io/tripleou/openstack-novajoin-server:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-novajoin-server:current-tripleo
+  imagename: docker.io/tripleou/openstack-octavia-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-octavia-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-octavia-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-octavia-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-octavia-health-manager:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-octavia-health-manager:current-tripleo
+  imagename: docker.io/tripleou/openstack-octavia-housekeeping:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-octavia-housekeeping:current-tripleo
+  imagename: docker.io/tripleou/openstack-octavia-worker:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-octavia-worker:current-tripleo
+  imagename: docker.io/tripleou/openstack-ovn-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ovn-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-ovn-controller:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ovn-controller:current-tripleo
+  imagename: docker.io/tripleou/openstack-ovn-northd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ovn-northd:current-tripleo
+  imagename: docker.io/tripleou/openstack-ovn-nb-db-server:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ovn-nb-db-server:current-tripleo
+  imagename: docker.io/tripleou/openstack-ovn-sb-db-server:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-ovn-sb-db-server:current-tripleo
+  imagename: docker.io/tripleou/openstack-placement-api:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-placement-api:current-tripleo
+  imagename: docker.io/tripleou/openstack-qdrouterd:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-qdrouterd:current-tripleo
+  imagename: docker.io/tripleou/openstack-rabbitmq:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-rabbitmq:current-tripleo
+  imagename: docker.io/tripleou/openstack-redis:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-redis:current-tripleo
+  imagename: docker.io/tripleou/openstack-rsyslog:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-rsyslog:current-tripleo
+  imagename: docker.io/tripleou/openstack-swift-base:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-swift-base:current-tripleo
+  imagename: docker.io/tripleou/openstack-swift-account:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-swift-account:current-tripleo
+  imagename: docker.io/tripleou/openstack-swift-container:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-swift-container:current-tripleo
+  imagename: docker.io/tripleou/openstack-swift-object:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-swift-object:current-tripleo
+  imagename: docker.io/tripleou/openstack-swift-proxy-server:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-swift-proxy-server:current-tripleo
+  imagename: docker.io/tripleou/openstack-tempest:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-tempest:current-tripleo
+  imagename: docker.io/tripleou/openstack-tripleoclient:current-tripleo
 - image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-tripleoclient:current-tripleo
-- image_source: tripleo
-  imagename: quay.io/tripleotrain/openstack-zaqar-wsgi:current-tripleo
+  imagename: docker.io/tripleou/openstack-zaqar-wsgi:current-tripleo
 - imagename: docker.io/ceph/daemon:v4.0.12-stable-4.0-nautilus-centos-7-x86_64
   image_source: ceph
 - imagename: docker.io/prom/prometheus:v2.7.2
