Replace overcloud-secure with overcloud-partition
https://review.opendev.org/#/c/741319/ in tripleo-image-elements
moves partition handling from overcloud-secure to
overcloud-partition to create whole disk image.

It breaks the overclodu hardened images jobs with
DIB_BLOCK_DEVICE: unbound variable.

By updating the element to overcloud-partition
fixes the issue.

It also updates the elements for uefi.

Closes-Bug: #1888613

Change-Id: I968e4c52dd0b63e26dd86ff137b0b8f1dfbcb311
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/image-yaml/overcloud-hardened-images-uefi-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3.yaml
@@ -22,7 +22,7 @@ disk_images:
       - remove-machine-id
       - remove-resolvconf
       - modprobe
-      - overcloud-secure-uefi
+      - overcloud-partition-uefi
       - openssh
       - disable-nouveau
     packages:
