--- a/image-yaml/overcloud-hardened-images-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-python3.yaml
@@ -22,7 +22,7 @@ disk_images:
       - remove-machine-id
       - remove-resolvconf
       - modprobe
-      - overcloud-secure
+      - overcloud-partition
       - openssh
       - disable-nouveau
     packages:
