Adding back overcloud-secure as it removes unsafe packages
Adding back overcloud-secure as it removes unsafe packages as the
overcloud-secure role was splitted in two roles: overcloud-partition
for partitionning handling and overcloud-secure for removal of unsafe
packages.

Change-Id: I84511dfdb8db11eca38c807ce71393cbbe453a68

--- a/image-yaml/overcloud-hardened-images-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-python3.yaml
@@ -23,6 +23,7 @@ disk_images:
       - remove-resolvconf
       - modprobe
       - overcloud-partition
+      - overcloud-secure
       - openssh
       - disable-nouveau
     packages:
