--- a/image-yaml/overcloud-hardened-images-uefi.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi.yaml
@@ -23,6 +23,7 @@ disk_images:
       - remove-resolvconf
       - modprobe
       - overcloud-partition-uefi
+      - overcloud-secure
       - openssh
       - disable-nouveau
     packages:
