--- a/image-yaml/overcloud-hardened-images.yaml
+++ b/image-yaml/overcloud-hardened-images.yaml
@@ -23,6 +23,7 @@ disk_images:
       - remove-resolvconf
       - modprobe
       - overcloud-partition
+      - overcloud-secure
       - openssh
       - disable-nouveau
     packages:
