--- a/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
+++ b/container-images/tcib/base/os/gnocchi-base/gnocchi-base.yaml
@@ -7,6 +7,7 @@ tcib_packages:
   - python3-cradox
   - python3-eventlet
   - httpd
+  - librados2
   - mod_ssl
   - python3-boto3
   - python3-ldappool
